preview change img

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="VSS HTML Tags  HTML, CSS3, JavaScript " />
+    <meta name="description" content="VSS HTML-Tags  HTML5, Basic-Form   " />
     <meta name="keywords" content="HTML, CSS, JavaScript , React , Nodejs" />
     <meta name="author" content="Yash" />
     <meta
       property="Headphone"
-      content="http://cdn.shopify.com/s/files/1/0153/8863/products/Headphone-Zone-Sony-WH-1000XM5-Black.jpg?v=1663741826&width=2048"
+      content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgSaTyM4FjAezYjmkX_U1k9TDwMVBNmf6_LQ&usqp=CAU"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML Tags</title>
